# iot-dev-sys

./: .gitignore  CMakeLists.txt  README.md  device_creds.json  software-requirements-specification.md
config/: CMakeLists.txt  device_config.json  mqtt_config.json
docs/: coffee-machine-protocol.md
firmware_files/water_dispenser/: water_fw_v1.8.0.img
include/dev_sys/common/: constants.h  status_codes.h  types.h
scripts/: build.sh  deploy.sh  format.sh  setup_postgresql.sh
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  message_router.cpp  message_router.h
src/app/config/: CMakeLists.txt  config_manager.cpp  config_manager.h
src/app/device/: CMakeLists.txt  device_activation.cpp  device_activation.h  device_manager.cpp  device_manager.h  device_type_manager.cpp  device_type_manager.h
src/app/fault/: CMakeLists.txt  fault_detector.cpp  fault_detector.h
src/app/order/: CMakeLists.txt  order_manager.cpp  order_manager.h
src/app/organization/: CMakeLists.txt  account_manager.cpp  account_manager.h  org_manager.cpp  org_manager.h
src/app/ota/: CMakeLists.txt  ota_manager.cpp  ota_manager.h
src/app/recipe/: CMakeLists.txt  recipe_manager.cpp  recipe_manager.h
src/hal/actuator/: CMakeLists.txt  actuator_base.h  heater.cpp  heater.h  motor.cpp  motor.h  pump.cpp  pump.h  valve.cpp  valve.h
src/hal/peripheral/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  display.cpp  display.h
src/hal/sensor/: CMakeLists.txt  flow_sensor.cpp  flow_sensor.h  sensor_base.h  temp_sensor.cpp  temp_sensor.h
src/middleware/communication/: CMakeLists.txt  api_server.cpp  api_server.h  http_client.cpp  http_client.h  mqtt_client.cpp  mqtt_client.h
src/middleware/security/: CMakeLists.txt  tls_manager.cpp  tls_manager.h
src/middleware/storage/: CMakeLists.txt  database.cpp  database.h  log_manager.cpp  log_manager.h
test/: CMakeLists.txt  device_simulator.cpp
test/app/: test_device_manager.cpp  test_fault_detector.cpp  test_order_manager.cpp  test_ota_manager.cpp
test/middleware/: test_database.cpp  test_log_manager.cpp  test_mqtt_client.cpp
toolchains/: arm-linux-gnueabihf.cmake
